# paper-portal

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.aws/: dev-task-definition.json
.github/workflows/: aws.yml
Docker/: app.Dockerfile  docker-compose-dev.yaml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 202310280711-f8ac28872624create_publications_table.py  202310310747-769515ecc0f1add_user_table.py  202310311013-834ec88df55fadd_organization_table.py  202311010637-f24044e290b1add_ad_offerings_and_relations.py  202311030759-deef52d61863add_publication_regions.py  202311100918-814ffc4cad0dupdate_publications_table.py  202311130829-4131a09945caupdate_ad_offerings.py  202311171928-e78db470e705add_ad_price.py  202311172201-fdd02c5e4d53add_index_to_ad_offering.py  202312042213-c76a397a958fuser_signup_changes.py  202312080818-566de0797ff6add_declined_to_user_invite.py  202312240723-a3f646d7b6ceadd_verified.py  202404161636-6221b1d6a68aadd_ad_dimensions.py  202404270840-b7ad5d5dde11add_publication_sections.py
backend/app/: app.py  main.py
backend/app/routes/: ad_offerings.py  publications.py  purchase_form.py  user_invites.py  users.py
backend/app/utils/: cors.py  custom_exceptions.py  user.py
backend/common/core/: config.py  enums.py  settings.py
backend/common/db/: init.py  models.py
backend/common/models/: ad_offering.py  ad_purchase.py  base.py  organization.py  publication.py  user.py  user_invite.py
backend/common/repositories/: ad_offerings_repo.py  ad_purchases_repo.py  base_repo.py  organizations_repo.py  publications_repo.py  purchase_form_repo.py  user_invites_repo.py  users_repo.py
backend/common/storage/: client.py  (+1 more)
frontend/: amplify.yml  env.sample  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+94 files in other folders)
