[tool.poetry]
name = "paper-portal"
version = "0.1.0"
description = ""
authors = ["Liam Tiernan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.104.0" }
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.22"
psycopg = "^3.1.12"
pydantic = "^2.4.2"
alembic = "^1.12.1"
greenlet = "^3.0.1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
aiofiles = "^23.2.1"
boto3 = "^1.34.85"
boto3-stubs = {extras = ["essential"], version = "^1.34.90"}
python-multipart = "^0.0.9"
python-magic = "^0.4.27"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
